syntax = "proto3";

package server.protoservices;
option go_package = ".;protoservices";

message GetUserRequest {
    string user_id = 1;
}
message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
}

service GetUserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
}